--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
 requests==2.26.0
 fastapi==0.70.0
 uvicorn==0.15.0
-python-dotenv==0.19.1
-aiofiles==0.7.0
-python-multipart==0.0.5
-Markdown==3.3.4
-pytest==6.2.5
+pydantic==1.10.13
+requests==2.26.0
